--- a/introduction.mdx
+++ b/introduction.mdx
@@ -66,24 +66,21 @@ Built by ex-core contributors to Lido and [P2P.ORG](http://p2p.org/), we are pio
 ## Launch Roadmap
 
 <Steps>
-  <Step title="Private Deposits Phase (April 2025)">
+  <Step title="Private Deposits Phase (Q2 2025)">
     Our initial launch allows early partners and whitelisted users to deposit BTC into our protocol. This phase includes:
     - Beta testing of core infrastructure
     - Limited capacity (capped at $10M)
     - Whitelisted smart contract access
     - KYC requirements for initial users
   </Step>
-  <Step title="Strategic Funding Round (May 2025)">
-    A strategic funding round to accelerate development and expand our team of engineers and strategists as we prepare for public launch.
-  </Step>
-  <Step title="Public Capped Launch (June 2025)">
+  <Step title="Public Capped Launch (Early Q3 2025)">
     The first public access to the protocol, featuring:
     - Permissionless smart contract for wider access
     - Higher but still limited capacity
     - Initial DeFi integrations
     - Enhanced monitoring and risk management systems
   </Step>
-  <Step title="Full-Scale Launch (Summer 2025)">
+  <Step title="Full-Scale Launch (Q3 2025)">
     Complete transition to a fully permissionless protocol with:
     - Unlimited capacity
     - Permissionless mint/redeem functionality
