--- a/strategy/faq.mdx
+++ b/strategy/faq.mdx
@@ -1,18 +1,15 @@
 ---
 title: "Strategy FAQ"
-description: "Frequently asked questions about the maxBTC strategy"
+description: "Frequently asked questions about the JLP Delta Neutral strategy"
 icon: "circle-question"
 ---
-
-# Strategy FAQ
-
 ## General Questions
 
 <AccordionGroup>
-  <Accordion title="What is the difference between maxBTC's displayed APY and Jupiter's displayed APY?">
+  <Accordion title="What is the difference between JLP Delta Neutral's displayed APY and Jupiter's displayed APY?">
     There are three different APY figures to consider:
 
-    1. **maxBTC Target APY**: 10% (bear market) to 20% (bull market)
+    1. **JLP Delta Neutral Target APY**: 10% (bear market) to 20% (bull market)
        - This is based on market conditions, reflecting an average across different market scenarios
 
     2. **JLP Website Displayed APY**: Often higher (e.g., 40%+)
@@ -115,11 +112,11 @@ icon: "circle-question"
     - Historical data shows BTC has never experienced a weekly drop exceeding 33.52% since perpetual listing on Binance in 2019
     - The ability to adjust deployment ratios if market conditions warrant it
 
-    Even in extreme market conditions, principal protection remains a key focus of the strategy design.
+    Even in extreme market conditions, principal protection remains a key focus of the JLP Delta Neutral strategy design.
   </Accordion>
 
   <Accordion title="How robust is the infrastructure?">
-    The strategy relies on a robust technical infrastructure with multiple redundancies:
+    The JLP Delta Neutral strategy relies on a robust technical infrastructure with multiple redundancies:
 
     1. **Automated Monitoring Systems**: Continuously track positions, collateral levels, and market conditions
     2. **Multi-Signature Security**: Critical operations require approval from multiple trusted parties
